--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ GOOGLE_CLIENT_ID=72924098420-04trbirnqhgcgc2rl0aoeeru9itnialp.apps.googleusercon
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dyl4eehvi"
-NEXTAUTH_URL="https://hangmgl.herokuapp.com/"
+NEXTAUTH_URL="https://localhost:3000"
