--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.11.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
@@ -33,6 +35,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.21.1",
     "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
     "swr": "^2.1.1",
@@ -41,6 +44,7 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.3",
     "@types/react-date-range": "^1.4.4",
